[package]
name = "jade-netlist"
version = "0.1.0"
authors = ["Derek Rhodes <physci@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.45"
serde_repr = "0.1.5"
serde_derive = "1.0.104"
wasm-bindgen = "0.2"
regex = "1.3.4"
